# dog-detector

./: .gitignore  .gitmodules
android-native/: local.properties  settings.gradle.kts
android-native/app/: build.gradle.kts
android-native/app/src/main/: AndroidManifest.xml
android-native/app/src/main/res/layout/: activity_main.xml  fragment_home.xml
android-native/app/src/main/res/navigation/: mobile_navigation.xml
android-native/gradle/wrapper/: gradle-wrapper.properties
cpp/: CMakeLists.txt  app.cpp  app.hpp
flutter_gl_surface/: README.md  pubspec.yaml
flutter_gl_surface/android/: settings.gradle
flutter_gl_surface/android/app/: build.gradle  proguard-rules.pro
flutter_gl_surface/android/app/src/main/: AndroidManifest.xml
flutter_gl_surface/assets/fonts/Salsa/: OFL.txt
flutter_gl_surface/lib/: app.dart  main.dart
flutter_gl_surface/lib/components/: animated_camera_button.dart  animated_camera_buttons.dart  animated_camera_menu.dart  camera_settings_page.dart  circle_button.dart  click_detector.dart  custom_checkbox.dart  hover_click.dart  item_in_menu_list.dart  my_cliper.dart  navigation_observer.dart  page_transition.dart  semaphore.dart  splash.dart
flutter_gl_surface/lib/pages/: account_page.dart  alert_page.dart  analizing_page.dart  app_model.dart  background_page.dart  camera_settings_page.dart  capture_page.dart  history_page.dart  home_page.dart  main_page.dart  record_page.dart  settings_page.dart
flutter_gl_surface/lib/pages/alert/: alert_addr_page.dart  alert_model.dart  alert_page.dart
flutter_gl_surface/lib/pages/capture/: camera_model.dart  capture_page.dart
flutter_gl_surface/lib/pages/components/: animated_camera_button.dart  animated_camera_buttons.dart  animated_camera_menu.dart  button_round_corner.dart  card.dart  circle_button.dart  custom_checkbox.dart  history_item.dart  history_item_thumb.dart  round_box.dart  slidable_item.dart
flutter_gl_surface/lib/pages/home/: grid_dialog.dart  history_grid_dialog.dart  history_item.dart  history_item_thumb.dart  history_model.dart  history_view_dialog.dart  home_page.dart  record_model.dart  search_page.dart  view_item1.dart  view_item2.dart
flutter_gl_surface/lib/pages/model/: app_model.dart  camera_model.dart  grid_model.dart  record_model.dart  search_model.dart
flutter_gl_surface/lib/pages/route/: main_route.dart
flutter_gl_surface/lib/pages/settings/: settings_about.dart  settings_model.dart  settings_page.dart
flutter_gl_surface/lib/repo/: my_rep.dart  nav_rep.dart  selection_repo.dart  settings_rep.dart
flutter_gl_surface/lib/resource/: constants.dart  disposable_stream.dart
flutter_gl_surface/lib/utils/: common.dart  converter.dart  file_utils.dart  log_printer.dart
scripts/: build_opencv.sh
(+31 files in other folders)
